# Quantum_robotic_arm

./: README.md
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/my_robot_controller/lib/my_robot_controller/: my_node
ros_ws/install/my_robot_controller/share/ament_index/resource_index/package_run_dependencies/: my_robot_controller
ros_ws/install/my_robot_controller/share/my_robot_controller/: package.dsv  package.ps1  package.sh
ros_ws/install/rl_control/share/rl_control/: package.xml
ros_ws/install/ur_client_library/share/ur_client_library/: package.sh
ros_ws/install/ur_moveit_config/share/ament_index/resource_index/package_run_dependencies/: ur_moveit_config
ros_ws/install/ur_moveit_config/share/ament_index/resource_index/parent_prefix_path/: ur_moveit_config
ros_ws/install/ur_moveit_config/share/ur_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
ros_ws/install/ur_moveit_config/share/ur_moveit_config/cmake/: ur_moveit_configConfig-version.cmake  ur_moveit_configConfig.cmake
ros_ws/install/ur_moveit_config/share/ur_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur_servo.yaml
ros_ws/install/ur_moveit_config/share/ur_moveit_config/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ros_ws/install/ur_moveit_config/share/ur_moveit_config/launch/: ur_moveit.launch.py
ros_ws/install/ur_moveit_config/share/ur_moveit_config/rviz/: view_robot.rviz
ros_ws/install/ur_moveit_config/share/ur_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
ros_ws/log/: latest_build
ros_ws/src/: control.py
ros_ws/src/benchmark/: CMakeLists.txt  qsr_test.py
ros_ws/src/benchmark/benchmark/: CMakeLists.txt  package.xml  qsr_test.py
ros_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/custom_interfaces/srv/: MyService.srv
ros_ws/src/log/: latest_list
ros_ws/src/my_robot_controller/: CMakeLists.txt
ros_ws/src/my_robot_controller/src/: my_node.cpp
ros_ws/src/quantum_bridge/: CMakeLists.txt
ros_ws/src/quantum_bridge/quantum_bridge/: CMakeLists.txt  package.xml  service_node.py
ros_ws/src/rl_control/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/rl_control/rl_control/: __init__.py  setup.py
ros_ws/src/rl_control/src/: hybrid_rl.py
ros_ws/src/vision_processing/: CMakeLists.txt  package.xml  qvision.py  setup.py
ros_ws/src/vision_processing/vision_processing/: CMakeLists.txt  _init_.py  package.xml  qvision.py
ros_ws/srv/: QuantumPathPlan.srv
