<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_processing</name>
  <version>0.0.0</version>
  <description>Vision processing package</description>
  <maintainer email="3970491712@qq.com">Your Name</sann>
  <license>Apache License 2.0</license>

  <exec_depend>python3</exec_depend>
  <exec_depend>open3d</exec_depend>
  <exec_depend>qiskit</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

