<?xml version="1.0"?>
<package format="3">
  <name>benchmark</name>
  <version>0.0.1</version>
  <description>Quantum speedup benchmark</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>rclpy</depend>
  <depend>custom_interfaces</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

