<?xml version="1.0"?>
<package format="3">
  <name>vision_processing</name>
  <version>0.0.1</version>
  <description>Quantum vision processing</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>open3d</depend>
  <depend>qiskit</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


